--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -73,3 +73,5 @@
 @import '../../node_modules/kanbasu/src/scss/components/container';
 @import '../../node_modules/kanbasu/src/scss/components/pusher';
 @import '../../node_modules/kanbasu/src/scss/components/table-responsive';
+
+@import "./components/box";
